# test-github-mcp

./: hello_world.py
lottery_test/: analyzer.py  data_fetcher.py  lottery_prediction.py
screen-reader/: README.md  pyproject.toml  requirements.txt
screen-reader/src/: __init__.py  main.py  ocr.py  selector.py  tts.py
