[tool.poetry]
name = "screen-reader"
version = "0.1.0"
description = "屏幕区域文字提取和语音播报工具"
authors = ["User"]

[tool.poetry.dependencies]
python = "^3.10"
pyautogui = "^0.9.54"
pytesseract = "^0.3.13"
pyttsx3 = "^2.90"
Pillow = "^10.4.0"
opencv-python = "^4.10.0"
numpy = "^^1.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
